k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandarin
spec:
  type: ClusterIP
  selector:
    app: mandarin
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
